# LabRPS

./: .gitattributes  .gitignore  .travis.yml  BUILD_OSX.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChangeLog.txt  LibraryVersions.h.cmake  PRIVACY_POLICY.md  README.md  appveyor.yml  build_unix_dev_conda.sh  config.h.cmake  config.pri  environment-linux.yml  environment-osx.yml  labrps.pro  lgtm.yml  requirements.txt  rpkg.macros
data/examples/: CMakeLists.txt  Example_1.RPSStd  Example_1.rps
src/App/: Annotation.cpp  Annotation.h  Application.cpp  Application.h  ApplicationPy.cpp  AutoTransaction.cpp  AutoTransaction.h  Branding.cpp  Branding.h  CMakeLists.txt  Color.h  ColorModel.cpp  ColorModel.h  ComplexGeoData.cpp  ComplexGeoData.h  ComplexGeoDataPy.xml  ComplexGeoDataPyImp.cpp  Document.cpp  Document.h  DocumentObject.cpp  DocumentObject.h  DocumentObjectExtension.cpp  DocumentObjectExtension.h  DocumentObjectExtensionPyImp.cpp  DocumentObjectFileIncluded.cpp  DocumentObjectFileIncluded.h  DocumentObjectGroup.cpp  DocumentObjectGroup.h  DocumentObjectGroupPyImp.cpp  DocumentObjectPy.xml  DocumentObjectPyImp.cpp  DocumentObserver.cpp  DocumentObserver.h  DocumentObserverPython.cpp  DocumentObserverPython.h  DocumentPy.xml  DocumentPyImp.cpp  DynamicProperty.cpp  DynamicProperty.h  Enumeration.cpp  (+121 more)
src/Gui/PreferencePackTemplates/: CMakeLists.txt
src/Libraries/Alphaplot/: AlphaplotGlobal.h  AssociationsDialog.cpp  AssociationsDialog.h  CMakeLists.txt  ColorBox.cpp  ColorBox.h  ColorButton.cpp  ColorButton.h  ConfigDialog.cpp  ConfigDialog.h  CurveRangeDialog.cpp  CurveRangeDialog.h  DataSetDialog.cpp  DataSetDialog.h  FindDialog.cpp  FindDialog.h  Folder.cpp  Folder.h  GraphType.h  ImageExportDlg.cpp  ImageExportDlg.h  ImportASCIIDialog.cpp  ImportASCIIDialog.h  LayerDialog.cpp  LayerDialog.h  Matrix.cpp  Matrix.h  MyWidget.cpp  MyWidget.h  OpenProjectDialog.cpp  OpenProjectDialog.h  PlotWizard.cpp  PlotWizard.h  PreCompiled.cpp  PreCompiled.h  README.md  Spectrogram.cpp  Spectrogram.h  Table.cpp  Table.h  (+4 more)
src/Libraries/SigmaSpectra/: AbstractMotion.h  CMakeLists.txt  Motion.cpp  Motion.h  MotionGroup.h  MotionLibrary.cpp  MotionLibrary.h  MotionPair.h  MotionSuite.h  SigmaSpectraGlobal.h
src/Libraries/smelt/: CMakeLists.txt
src/Main/: CMakeLists.txt  LabRPSGuiPy.cpp  MainCmd.cpp  MainGui.cpp  MainPy.cpp  core-main.dox  labrps.rc  labrps.rc.cmake  labrpsCmd.rc.cmake
src/Mod/: CMakeLists.txt  mod.dox
src/Mod/AddonManager/: ALLOWED_PYTHON_PACKAGES.txt  Addon.py  AddonManager.py  AddonManagerOptions.ui  CMakeLists.txt  Init.py  InitGui.py  NetworkManager.py  TestAddonManagerApp.py  TestAddonManagerGui.py  addonmanager.dox  addonmanager_macro.py  addonmanager_plugin.py  addonmanager_utilities.py  addonmanager_workers.py  change_branch.py  dependency_resolution_dialog.ui  first_run.ui  install_to_toolbar.py  package_details.py  package_details.ui  package_list.py
src/Mod/GeneralTools/: CMakeLists.txt  GeneralTools.py  GeneralToolsGlobal.h  Init.py  InitGui.py
src/Mod/Help/: CMakeLists.txt  Help.py  default.css  dlgPreferencesHelp.ui
src/Mod/Idf/: CMakeLists.txt  Idf.py  Init.py
src/Mod/Image/: CMakeLists.txt  ImageGlobal.h  Init.py  InitGui.py
src/Mod/Import/: CMakeLists.txt  ImportGlobal.h  Init.py  InitGui.py  stepZ.py
src/Mod/Measure/: CMakeLists.txt  Init.py  MeasureGlobal.h
src/Mod/OpenSCAD/: CMakeLists.txt  Init.py  InitGui.py  OpenSCAD2Dgeom.py  OpenSCADCommands.py  OpenSCADFeatures.py  OpenSCADUtils.py  TestOpenSCADApp.py  TestOpenSCADGui.py  colorcodeshapes.py  expandplacements.py  exportCSG.py  importCSG.py  prototype.py  replaceobj.py  tokrules.py
src/Mod/Part/: CMakeLists.txt  Init.py  InitGui.py  JoinFeatures.py  MakeBottle.py  PartEnums.py  PartGlobal.h  TestPartApp.py  TestPartGui.py
src/Mod/Plot/: CMakeLists.txt  InitGui.py  Plot.py  PlotGui.py  README.md
src/Mod/SeaLab/: CMakeLists.txt  Init.py  InitGui.py  SeaLabGlobal.h  SeaLabObjects.py  SeaLabUtils.py  TestSeaLabGui.py
src/Mod/SeaLabAPI/: CMakeLists.txt  Init.py  InitGui.py  SeaLabAPIGlobal.h  SeaLabAPIScripts.py
src/Mod/SeaLabPlugins/: CMakeLists.txt
src/Mod/SeaLabPlugins0/: CMakeLists.txt
src/Mod/SeaLabTools/: CMakeLists.txt  Init.py  InitGui.py  SeaLabTools.py  SeaLabToolsGlobal.h
src/Mod/SeismicLab/: CMakeLists.txt  InitGui.py  SeismicLabGlobal.h  SeismicLabObjects.py  SeismicLabUtils.py
src/Mod/SeismicLabAPI/: CMakeLists.txt  Init.py  InitGui.py  SeismicLabAPIGlobal.h  SeismicLabAPIScripts.py
src/Mod/SeismicLabPlugins/: CMakeLists.txt
src/Mod/SeismicLabTools/: CMakeLists.txt  Init.py  InitGui.py  SeismicLabTools.py  SeismicLabToolsGlobal.h
src/Mod/Spreadsheet/: CMakeLists.txt  Init.py  InitGui.py  SpreadsheetGlobal.h  TestSpreadsheet.py  TestSpreadsheetGui.py  importXLSX.py
src/Mod/Start/: CMakeLists.txt  Init.py  InitGui.py  StartGlobal.h  start.dox
src/Mod/TemplatePyMod/: Automation.py  CMakeLists.txt  Commands.py  DocumentObject.py  FeaturePython.py  Init.py  MengerSponge.py  Mesh2Shape.py  PythonQt.py  SplineSurface.py  TaskPanel.py  Tests.py  Texture.py
src/Mod/Test/: BaseTests.py  CMakeLists.txt  Document.py  Init.py  InitGui.py  Menu.py  Metadata.py  TestApp.py  TestGui.py  TestPythonSyntax.py  UnicodeTests.py  UnitTests.py  Workbench.py  test.dox  testPathArray.py  testPathArraySel.py  testmakeWireString.py
src/Mod/UserDefinedPhenomenonLab/: CMakeLists.txt  Init.py  InitGui.py  TestUserDefinedPhenomenonLabGui.py  UserDefinedPhenomenonLabGlobal.h  UserDefinedPhenomenonLabObjects.py  UserDefinedPhenomenonLabUtils.py
src/Mod/UserDefinedPhenomenonLabAPI/: CMakeLists.txt  UserDefinedPhenomenonLabAPIGlobal.h  UserDefinedPhenomenonLabAPIScripts.py
src/Mod/UserLab/: CMakeLists.txt  Init.py  InitGui.py  TestUserLabApp.py  TestUserLabGui.py  UserLabGlobal.h  UserLabObjects.py  UserLabUtils.py
src/Mod/UserLabAPI/: CMakeLists.txt  Init.py  InitGui.py  UserLabAPIGlobal.h  UserLabAPIScripts.py
src/Mod/UserLabPlugins/: CMakeLists.txt
src/Mod/Web/: CMakeLists.txt  Init.py  InitGui.py  TestWebGui.py  WebGlobal.h  web.dox
(+4865 files in other folders)
